--- a/OmniGibson/omnigibson/learning/configs/base_config.yaml
+++ b/OmniGibson/omnigibson/learning/configs/base_config.yaml
@@ -14,3 +14,4 @@ write_video: true # whether we record videos during rollout
 partial_scene_load: false  # whether to only load task-relevant rooms for a specific task
 max_steps: null  # max steps per rollout episode, setting to null will use the default value (2 x average human demo completion steps)
 log_path: ???
+test_hidden: false  # [Internal use only] whether to eval on hidden test instances
